--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@nanta/ui": "^0.1.0-alpha.11",
     "@vitejs/plugin-vue": "^3.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
